<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/author"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="30sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:background="#000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/bhole"
            android:padding="10dp"
            android:text="@string/support"
            android:textColor="#fff"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/bhole"
            android:padding="10dp"
            android:text="@string/tnc"
            android:textColor="#fff"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/bhole"
            android:padding="10dp"
            android:text="@string/about"
            android:textColor="#fff"
            android:textSize="20sp" />

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/alizarin"
            android:gravity="center"
            android:text="@string/sign_out"
            android:textColor="#fff" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>