<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <!--<ImageView android:src="@drawable/logo"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="72dp"-->
        <!--android:layout_marginBottom="24dp"-->
        <!--android:layout_gravity="center_horizontal" />-->
        <!---->
        <TextView
            android:id="@+id/comapnyName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:padding="16dp"
            android:text="@string/concert_nlogin"
            android:textAlignment="textStart"
            android:textColor="@color/midblue"
            android:textSize="50sp" />

        <!-- Email Label -->
        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/border_box"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:textAlignment="center"
            android:textColor="@color/midblue"
            android:textColorHint="@color/midblue" />

        <!-- Password Label -->
        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/border_box"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textAlignment="center"
            android:textColor="@color/midblue"
            android:textColorHint="@color/midblue" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="24dp"
            android:background="@color/ptriver"
            android:text="@string/login" />

        <TextView
            android:id="@+id/link_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/no_account"
            android:textSize="16sp" />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>